style.css
* {
    margin: 0;
    padding: 0;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    outline: none;
    font: inherit;
    color: inherit;
}

body {
    font: 36px/40px monospace;
    position: fixed;
    margin: .25em;
    background: #e4e4e4;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.input-container, #output {
    position: absolute;
    left: 0;
    right: 0;
    overflow: hidden;
}

#output {
    top: 0;
    height: 2em;
    background: #F7F7F7;
    color: #000;
    padding: .5em;
    border-radius: .25em .25em .1em .1em;
    box-shadow:
        inset 0 0 .3em .05em #888,
        inset 0 -.05em .1em #666,
        inset 0 1em #fff,
        0 -.05em .05em #888,
        0 .05em .05em #fff;
}

#output.invalid {
    color: #ccc;
}

.input-container {
    bottom: 0;
    top: 2.15em;
}

.input-container #input {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    padding: .5em;
    border: none;
    background: #222;
    color: #fff;
    resize: none;
    border-radius: .1em .1em .25em .25em;
    box-shadow:
        inset 0 0 .3em .05em #000,
        0 -.05em .05em #888,
        0 .05em .05em #fff;
}

.trigger {
    bottom: .25em;
    right: .25em;
    margin: 0 .01em .01em 0;
    text-decoration: none;
    display: block;
}

.trigger-open {
    position: fixed;
    background: #555;
    text-shadow: 0 .05em #666;
    box-shadow: inset 0 .05em #666;
    border-radius: .25em 0;
    z-index: 1;
    opacity: .5;
    -webkit-transition: opacity .2s ease;
    -moz-transition: opacity .2s ease;
    transition: opacity .2s ease;
}

.trigger-open:hover {
    opacity: 1;
}

.trigger span {
    font-size: .5em;
    line-height: 1.25em;
    display: block;
    text-align: center;
    height: 1.25em;
    width: 1.25em;
    color: #000;
}

section {
    position: fixed;
    background: #ddd;
    padding: 1em;
    top: 0;
    left: 10%;
    bottom: 0;
    right: 0;
    z-index: 2;
    overflow: hidden;
    box-shadow: inset 0 .05em #fff;
    text-shadow: 0 .05em #fff;
    -webkit-transform: translate(110%, 0);
    -moz-transform: translate(110%, 0);
    transform: translate(110%, 0);
    -webkit-transition: all .75s ease;
    -moz-transition: all .75s ease;
    transition: all .75s ease;
}

section:target {
    -webkit-transform: translate(0, 0);
    -moz-transform: translate(0, 0);
    transform: translate(0, 0);
    box-shadow:
        inset 0 .05em #fff,
        0 0 .3em .05em rgba(0,0,0,.5),
        0 0 1em #000;
}

section h1 {
    font-weight: bold;
}

section p {
    font-size: .5em;
}

section .trigger-close {
    position: absolute;
}

#bookmarklet {
    background: #333;
    padding: 0 1em;
    color: #fff;
    text-decoration :none;
    display: inline-block;
    border-radius: .5em;
    border: 1px solid #222;
    text-shadow:
        0 .1em #666,
        0 -.1em #000;
    box-shadow:
        inset 0 2em .1em -1em rgba(255,255,255,.1),
        inset 0 .1em .1em #666,
        inset 0 -.1em .1em #000;
    -webkit-transition: all .2s ease;
    -moz-transition: all .2s ease;
    transition: all .2s ease;
}

#bookmarklet:hover {
    background: #444;
}

#bookmarklet:active {
    background: #222;
    box-shadow:
        inset 0 2em .1em -1em rgba(255,255,255,.1),
        inset 0 -.1em .1em #666,
        inset 0 .1em .1em #000;
}

